--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: '3'
 services:
+  api:
+    build: .
+    volumes:
+      - '.:/usr/src/app'
+    ports:
+      - 3000:3000
+    depends_on:
+      - db
   db:
     container_name: 'mongodb'
     image: 'mongo'
@@ -7,3 +15,20 @@ services:
       - 27017:27017
     volumes:
       - ./data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+  mongo-express:
+    image: "mongo-express:latest"
+    ports:
+      - "8081:8081"
+    volumes:
+      - ./docker-entrypoint.sh:/docker-entrypoint.sh
+    environment:
+      ME_CONFIG_MONGODB_SERVER: db
+      ME_CONFIG_BASICAUTH_USERNAME: 'root'
+      ME_CONFIG_BASICAUTH_PASSWORD: example
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+    depends_on:
+      - db
