--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/register": "^7.12.10",
     "chai": "^4.2.0",
+    "chalk": "^4.1.0",
     "mocha": "^8.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
