--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-  api:
-    build: .
-    volumes:
-      - '.:/usr/src/app'
-    ports:
-      - 3000:3000
-    depends_on:
-      - db
+  # api:
+    # build: .
+    # volumes:
+    #   - '.:/usr/src/app'
+    # ports:
+    #   - 3000:3000
+    # depends_on:
+    #   - db
   db:
     container_name: 'mongodb'
     image: 'mongo'
@@ -15,9 +15,6 @@ services:
       - 27017:27017
     volumes:
       - ./data:/data/db
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
   mongo-express:
     image: "mongo-express:latest"
     ports:
@@ -26,9 +23,5 @@ services:
       - ./docker-entrypoint.sh:/docker-entrypoint.sh
     environment:
       ME_CONFIG_MONGODB_SERVER: db
-      ME_CONFIG_BASICAUTH_USERNAME: admin
-      ME_CONFIG_BASICAUTH_PASSWORD: admin
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-    depends_on:
+    links:
       - db
