--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.24.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "email-templates": "^8.0.3",
